New background color

--- a/demo_app/quote_collector/templates/index.html
+++ b/demo_app/quote_collector/templates/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #CDEBC5;
+      background-color: #0fe942;
       margin: 0;
       padding: 0 20px;
     }
